--- a/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
@@ -358,6 +358,8 @@
 
                         <p:commandButton style="position: absolute; left: 717px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" disabled="#{controlEmpleadoIndividual.guardado}" value="Aceptar" icon="ui-icon-check" process="@this" />
                         <p:commandButton style="position: absolute; left: 9px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlEmpleadoIndividual.refrescar()}"  process="@this" />
+                        <p:commandButton style="position: absolute; left: 100px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="IMPRIMIRHOJAVIDA" value="Imprimir Hoja de Vida" process="@this"/>
+                        <p:commandButton style="position: absolute; left: 243px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REPORTESPERSONAL" value="Reportes de Personal" process="@this" action="reportePersonal"/>
                         <p:commandButton style="position: absolute; left: 800px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlVigenciasCargos.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
