--- a/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
@@ -12,13 +12,13 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Históricos Sets" style=" font-size: 12px; position: absolute; width: 685px; height: 440px;  text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Históricos Sets" style=" font-size: 12px; position: absolute; width: 874px; height: 530px;  text-align: left" >  
 
                         <h:outputText id="btn" style="position: absolute; left: 25px; top: 40px; background-image: url(Imagenes/icon-question-big.png); width:60px ;height:60px; background-repeat: no-repeat; background-size: 100% 100%; "/>
                         <p:tooltip style="font-size: 12px" for="btn" value="Información del SET (Salario Equivalente Tributario)" showEffect="slide" hideEffect="slide"/>
                         <p:inputText style="position: absolute; left: 90px; top: 80px; width: 200px; height: 12px;position: absolute; " readonly="true" id="nombreEmpleado" value="#{controlSets.empleado.persona.primerapellido} #{controlSets.empleado.persona.segundoapellido} #{controlSets.empleado.persona.nombre}"/>  
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 70px; left: 360px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 70px; left: 540px;">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlSets.guardarCambiosSets()}" process="@this" />
@@ -61,12 +61,12 @@
                             </p:toolbarGroup>  
                         </p:toolbar> 
 
-                        <fieldset style="position: absolute; left: 10px; top: 110px; font-size: 10px; width: 645px; height: 285px; border-radius: 10px; ">
+                        <fieldset style="position: absolute; left: 10px; top: 110px; font-size: 10px; width: 830px; height: 285px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue"><strong>Reformas Laborales</strong></legend>
                             <!-- TABLA EMPLVIGENCIAREFORMALABORAL -->
 
-                            <p:dataTable id="datosSetsEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left"                           
-                                         value="#{controlSets.setsEmpleado}" scrollable="true" scrollHeight="150" scrollWidth="642"
+                            <p:dataTable id="datosSetsEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left;"                           
+                                         value="#{controlSets.setsEmpleado}" scrollable="true" scrollHeight="150" 
                                          filteredValue="#{controlSets.filtrarSets}" emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell" paginator="true" rows="6"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
@@ -185,9 +185,9 @@
                             </p:dataTable>  
                         </fieldset>  
 
-                        <p:commandButton style="position: absolute; left: 500px; top: 411px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosSetsEmpleado" process="@this" />
+                        <p:commandButton style="position: absolute; left: 680px; top: 411px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosSetsEmpleado" process="@this" />
                         <p:commandButton style="position: absolute; left: 40px; top: 412px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlSets.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 600px; top: 412px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlSets.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 780px; top: 412px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlSets.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
 
