--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaJornada.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaJornada.xhtml
@@ -11,8 +11,8 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Históricos Jornadas" style=" font-size: 12px; position: absolute; width: 740px; height: 545px; text-align: left" >  
-                        <h:outputText style="position: absolute; left: 500px; top: 60px; width: 200px; height: 12px;position: absolute;" id="nombreEmpleado" value="#{controlVigenciaJornada.empleado.persona.primerapellido} #{controlVigenciaJornada.empleado.persona.segundoapellido} #{controlVigenciaJornada.empleado.persona.nombre}">
+                    <p:panel  id="PanelTotal" header="Históricos Jornadas" style=" font-size: 12px; position: absolute; width: 874px; height: 545px; text-align: left" >  
+                        <h:outputText style="position: absolute; left: 500px; top: 60px; width: 200px; height: 12px;position: absolute;color: red;font-weight: bold " id="nombreEmpleado" value="#{controlVigenciaJornada.empleado.persona.primerapellido} #{controlVigenciaJornada.empleado.persona.segundoapellido} #{controlVigenciaJornada.empleado.persona.nombre}">
                         </h:outputText>  
 
                         <p:toolbar style="font-size: 12px; position: absolute; top: 50px; left: 20px;">  
@@ -58,12 +58,12 @@
                             </p:toolbarGroup>  
                         </p:toolbar> 
 
-                        <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 700px; height: 222px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 820px; height: 222px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: blue"><strong>Jornada del Trabajador</strong></legend>
                             <!-- TABLA EMPLVIGENCIALOCALIZACION -->
 
-                            <p:dataTable id="datosVJEmpleado" var="infoVJ" rowKey="#{infoVJ.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 700px"   
-                                         value="#{controlVigenciaJornada.listVigenciasJornadas}" scrollable="true" scrollHeight="85" scrollWidth="700"
+                            <p:dataTable id="datosVJEmpleado" var="infoVJ" rowKey="#{infoVJ.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 820px"   
+                                         value="#{controlVigenciaJornada.listVigenciasJornadas}" scrollable="true" scrollHeight="85" scrollWidth="820"
                                          filteredValue="#{controlVigenciaJornada.filtrarVigenciasJornadas}" emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell" paginator="true" rows="3"  
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
@@ -127,7 +127,7 @@
                             </p:dataTable>  
                         </fieldset>
 
-                        <fieldset style="position: absolute;top: 327px;left: 10px;height: 180px;width: 335px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute;top: 327px;left: 10px;height: 180px;width: 390px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 10px; color: blue"><strong>Descanso tomado en tiempo</strong></legend>
                             <p:dataTable id="datosVigenciaCT" var="info" rowKey="" rowIndexVar="indiceVCT" value="#{controlVigenciaJornada.listVigenciasCompensacionesTiempo}"
                                          editable="true" editMode="cell" rows="3" filteredValue="#{controlVigenciaJornada.filtrarVigenciasCompensacionesTiempo}"
@@ -196,7 +196,7 @@
                         </fieldset>
 
 
-                        <fieldset style="position: absolute;top: 327px;left: 375px;height: 180px;width: 335px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute;top: 327px;left: 440px;height: 180px;width: 390px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 10px; color: blue"><strong>Descanso tomado en dinero</strong></legend>
                             <p:dataTable id="datosVigenciaCD" var="info2" rowKey="" rowIndexVar="indiceVCD" value="#{controlVigenciaJornada.listVigenciasCompensacionesDinero}"
                                          editable="true" editMode="cell" rows="3" filteredValue="#{controlVigenciaJornada.filtrarVigenciasCompensacionesDinero}"
@@ -330,9 +330,9 @@
                             </p:commandButton>
                         </p:dialog>
 
-                        <p:commandButton style="position: absolute; left: 550px; top: 521px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVJEmpleado" process="@this" />
+                        <p:commandButton style="position: absolute; left: 650px; top: 521px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVJEmpleado" process="@this" />
                         <p:commandButton style="position: absolute; left: 30px; top: 521px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciaJornada.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 650px; top: 521px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlVigenciaJornada.cancelarModificacion()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 750px; top: 521px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlVigenciaJornada.cancelarModificacion()}" action="nomina" process="@this" />
                     </p:panel>  
 
                     <p:dialog id="confirmarGuardar" header="ATENCIÓN...!" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
