--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
@@ -11,8 +11,8 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Históricos de Localizaciones" style=" font-size: 12px; position: absolute; width: 740px; height: 555px; left: 300px; top: 100px;text-align: left" >  
-                        <h:outputText style="position: absolute; left: 500px; top: 45px; width: 200px; height: 12px;position: absolute;" id="nombreEmpleado" value="#{controlVigenciaLocalizacion.empleado.persona.primerapellido} #{controlVigenciaLocalizacion.empleado.persona.segundoapellido} #{controlVigenciaLocalizacion.empleado.persona.nombre}">
+                    <p:panel  id="PanelTotal" header="Históricos de Localizaciones" style=" font-size: 12px; position: absolute; width: 874px; height: 555px; left: 300px; top: 100px;text-align: left" >  
+                        <h:outputText style="position: absolute; left: 500px; top: 45px; width: 200px; height: 12px;position: absolute;color: red; font-weight: bold" id="nombreEmpleado" value="#{controlVigenciaLocalizacion.empleado.persona.primerapellido} #{controlVigenciaLocalizacion.empleado.persona.segundoapellido} #{controlVigenciaLocalizacion.empleado.persona.nombre}">
                         </h:outputText>  
 
                         <p:toolbar style="font-size: 12px; position: absolute; top: 35px; left: 20px;">  
@@ -58,12 +58,12 @@
                             </p:toolbarGroup>  
                         </p:toolbar> 
 
-                        <fieldset style="position: absolute; left: 10px; top: 75px; font-size: 10px; width: 700px; height: 222px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute; left: 10px; top: 75px; font-size: 10px; width: 820px; height: 222px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: blue"><strong>Localización del Empleado</strong></legend>
                             <!-- TABLA EMPLVIGENCIALOCALIZACION -->
 
-                            <p:dataTable id="datosVLEmpleado" var="infoDVL" rowKey="#{infoDVL.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 700px"   
-                                         value="#{controlVigenciaLocalizacion.vigenciaLocalizaciones}" scrollable="true" scrollHeight="85" scrollWidth="700"
+                            <p:dataTable id="datosVLEmpleado" var="infoDVL" rowKey="#{infoDVL.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 820px"   
+                                         value="#{controlVigenciaLocalizacion.vigenciaLocalizaciones}" scrollable="true" scrollHeight="85" scrollWidth="820"
                                          filteredValue="#{controlVigenciaLocalizacion.filtrarVL}" emptyMessage="No se encontrarón resultados para la búsqueda"
                                          editable="true" editMode="cell" paginator="true" rows="3"  
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
@@ -160,13 +160,13 @@
                             </p:dataTable>  
                         </fieldset>
   
-                        <fieldset style="position: absolute;top: 312px;left: 10px;height: 200px;width: 335px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute;top: 312px;left: 10px;height: 200px;width: 390px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 10px; color: blue"><strong>Prorrateo por Centros de Costo</strong></legend>
                             
                             <p:dataTable id="datosVPVigencia" var="info" rowKey="#{info.secuencia}" rowIndexVar="indiceVP" 
-                                         value="#{controlVigenciaLocalizacion.vigenciasProrrateosVigencia}" style="font-size: 10px; border: 1px;width:"
+                                         value="#{controlVigenciaLocalizacion.vigenciasProrrateosVigencia}" style="font-size: 10px; border: 1px;width:390px"
                                          filteredValue="#{controlVigenciaLocalizacion.filtradoVigenciasProrrateosVigencia}" emptyMessage="No se encontrarón resultados para la búsqueda" 
-                                         scrollable="true" editable="true" editMode="cell" rows="2" scrollHeight="65" scrollWidth="335"   paginator="true"
+                                         scrollable="true" editable="true" editMode="cell" rows="2" scrollHeight="65" scrollWidth="390"   paginator="true"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 
                                 <p:column headerText="Centro de Costos" sortBy="#{info.centrocosto.nombre}" filterBy="#{info.centrocosto.nombre}" filterMatchMode="contains" id="vPCentroCosto" filterStyle="display: none; visibility: hidden;"  style="width: 110px; font-size: 11px" >                                  
@@ -280,11 +280,11 @@
                         </fieldset>
 
 
-                        <fieldset style="position: absolute;top: 312px;left: 375px;height: 200px;width: 335px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute;top: 312px;left: 440px;height: 200px;width: 390px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 10px; color: blue"><strong>Prorrateo por Proyecto</strong></legend>
                             <p:dataTable id="datosVPPVigencia" var="info2" rowKey="#{info2.secuencia}" rowIndexVar="indiceVPP" value="#{controlVigenciaLocalizacion.vigenciasProrrateosProyectosVigencia}" 
                                          filteredValue="#{controlVigenciaLocalizacion.filtradoVigenciasProrrateosProyectosVigencia}" editable="true" editMode="cell" rows="3"
-                                         scrollable="true" scrollHeight="65" scrollWidth="335" emptyMessage="No se encontrarón resultados para la búsqueda" style="font-size: 10px; border: 1px;width:"  paginator="true"
+                                         scrollable="true" scrollHeight="65" scrollWidth="390" emptyMessage="No se encontrarón resultados para la búsqueda" style="font-size: 10px; border: 1px;width:390px"  paginator="true"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 
                                 <p:column headerText="Proyecto" sortBy="#{info2.proyecto.nombreproyecto}" filterBy="#{info2.proyecto.nombreproyecto}" filterMatchMode="contains" id="vPPProyecto" filterStyle="display: none; visibility: hidden;"  style="width: 100px; font-size: 11px">
@@ -588,9 +588,9 @@
                         </p:dialog>
 
 
-                        <p:commandButton style="position: absolute; left: 510px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVLEmpleado" process="@this" />
+                        <p:commandButton style="position: absolute; left: 650px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVLEmpleado" process="@this" />
                         <p:commandButton style="position: absolute; left: 200px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciaLocalizacion.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 626px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w"  actionListener="#{controlVigenciaLocalizacion.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 750px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w"  actionListener="#{controlVigenciaLocalizacion.salir()}" action="nomina" process="@this" />
                         <p:commandButton style="position: absolute; left: 20px; top: 530px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ARCHIVOPLANO" value="Archivo Plano Prorrateos" process="@this" />
 
                     </p:panel>
